<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mferariz.myapplication.ui.fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/header_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_large_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape"
            android:src="@mipmap/ic_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/title"
            android:text="@string/title_login"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_login"
        android:layout_above="@id/go_register_button">

        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            style="@style/margin_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_email"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/go_register_button"
        style="@style/flat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_large_margin"
        android:layout_marginEnd="@dimen/activity_large_margin"
        android:layout_marginBottom="@dimen/activity_large_margin"
        android:text="@string/btn_go_register" />

</RelativeLayout>